igt@perf_pmu@frequency-idle - Failed assertion: idle[0] <= min_freq
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7449/shard-skl6/igt@perf_pmu@frequency-idle.html
Starting subtest: frequency-idle
(perf_pmu:2113) CRITICAL: Test assertion failure function test_frequency_idle, file ../tests/perf_pmu.c:1515:
(perf_pmu:2113) CRITICAL: Failed assertion: idle[0] <= min_freq
(perf_pmu:2113) CRITICAL: Request frequency should be 0 while parked!
Subtest frequency-idle failed.
**** DEBUG ****
(perf_pmu:2113) DEBUG: Test requirement passed: sysfs >= 0
(perf_pmu:2113) DEBUG: Test requirement passed: !(fd < 0 && errno == ENODEV)
(perf_pmu:2113) DEBUG: Test requirement passed: !(fd < 0 && errno == ENODEV)
(perf_pmu:2113) igt_debugfs-DEBUG: Opening debugfs directory '/sys/kernel/debug/dri/0'
(perf_pmu:2113) INFO: Idle frequency: requested 815.4, actual 815.4; HW min 300
(perf_pmu:2113) CRITICAL: Test assertion failure function test_frequency_idle, file ../tests/perf_pmu.c:1515:
(perf_pmu:2113) CRITICAL: Failed assertion: idle[0] <= min_freq
(perf_pmu:2113) CRITICAL: Request frequency should be 0 while parked!
(perf_pmu:2113) igt_core-INFO: Stack trace:
(perf_pmu:2113) igt_core-INFO: #0 ../lib/igt_core.c:1830 __igt_fail_assert()
(perf_pmu:2113) igt_core-INFO: #1 ../tests/perf_pmu.c:1229 __real_main1819()
(perf_pmu:2113) igt_core-INFO: #2 ../tests/perf_pmu.c:1819 main()
(perf_pmu:2113) igt_core-INFO: #3 ../csu/libc-start.c:344 __libc_start_main()
(perf_pmu:2113) igt_core-INFO: #4 [_start+0x2a]
**** END ****
Subtest frequency-idle: FAIL (0.756s)
Edited by Chris Wilson